--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Weather Watcher Dashboard</h1>
+    <h1>Eberechi Weather Watcher</h1>
     <div class="container">
       <div class="weather-input">
         <h3>Enter a City Name</h3>
