--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <main>
     <h1>Eberechi Weather Watcher</h1>
     <div class="container">
       <div class="weather-input">
@@ -71,6 +72,13 @@
         
       </div>
     </div>
-    
+    </main>
+    <footer>
+      <p>My name is <strong><em>Eberechukwunemerem John Sunday.</em></strong> I am a curious and passionate learner.</P>
+      <p>This my first portfolio project and I am open for corrections.</p>
+      <P>You can reach me by <a href="mailto:eberechukwunemeremjohnsunday@gmail.com">Send Email</a></P>
+      <p></p>No Copyright - <a href="https://www.github.com/eberechi10</a></P>
+      <p> Your suggesstions are welcome. Thank you.</p>
+    </footer>
   </body>
 </html>
