--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
     </div>
     </main>
     <footer>
-      <p>My name is <strong><em>Eberechukwunemerem John Sunday.</em></strong> I am a curious and passionate learner.</P>
-      <p>This my first portfolio project and I am open for corrections.</p>
-      <P>You can reach me by <a href="mailto:eberechukwunemeremjohnsunday@gmail.com">Send Email</a></P>
-      <p></p>No Copyright - <a href="https://www.github.com/eberechi10</a></P>
-      <p> Your suggesstions are welcome. Thank you.</p>
+      <h3>><p>My name is <strong><em>Eberechukwunemerem John Sunday.</em></strong> I am a curious and passionate learner.</P></h3>
+      <h3><p>This my first portfolio project and I am open for corrections.</p></h3>
+      <h3><P>You can reach me by <a href="mailto:eberechukwunemeremjohnsunday@gmail.com">Send Email</a></P></h3>
+      <h3><p></p>No Copyright - <a href="https://www.github.com/eberechi10>github.com/eberechi10</a></P></h3>
+      <h3><p> Your suggesstions are welcome. Thank you.</p></h3>
     </footer>
   </body>
 </html>
